--- a/LiveTimeCounter/Base.lproj/Main.storyboard
+++ b/LiveTimeCounter/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="B2g-xz-Wlh">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="NtH-h6-0Rr">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <navigationController id="B2g-xz-Wlh" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5h6-3i-qBA">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="IGT-9R-Ib8" kind="relationship" relationship="rootViewController" id="Ymr-Bl-2g7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sgu-Su-WSB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="364" y="114"/>
+        </scene>
+        <!--Input-->
+        <scene sceneID="TVe-TW-GkK">
+            <objects>
+                <viewController title="Input" id="IGT-9R-Ib8" customClass="InputViewController" customModule="LiveTimeCounter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iLK-dB-KxU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVL-Nb-OXQ">
+                                <rect key="frame" x="27" y="226" width="320" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="-990507347.53414595">
+                                    <!--1969-08-12 19:04:12 +0000-->
+                                </date>
+                                <locale key="locale" localeIdentifier="de_DE"/>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please Enter Your Birthday  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwi-CT-AhL">
+                                <rect key="frame" x="18" y="126" width="340" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rA5-xs-1UU">
+                                <rect key="frame" x="143" y="548" width="90" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Calculate"/>
+                                <connections>
+                                    <segue destination="ExH-rz-lAD" kind="show" identifier="calculate" id="O3s-CU-J0e"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BVL-Nb-OXQ" firstAttribute="centerY" secondItem="iLK-dB-KxU" secondAttribute="centerY" id="1w4-71-RoY"/>
+                            <constraint firstItem="rA5-xs-1UU" firstAttribute="centerX" secondItem="iLK-dB-KxU" secondAttribute="centerX" id="4TL-fk-t2J"/>
+                            <constraint firstItem="BVL-Nb-OXQ" firstAttribute="centerY" secondItem="iLK-dB-KxU" secondAttribute="centerY" id="9p2-Fm-5i8"/>
+                            <constraint firstItem="fwi-CT-AhL" firstAttribute="top" secondItem="Swi-gF-K8Z" secondAttribute="top" constant="62" id="Hyk-GG-MX2"/>
+                            <constraint firstItem="fwi-CT-AhL" firstAttribute="centerX" secondItem="iLK-dB-KxU" secondAttribute="centerX" id="Iv8-fr-3X5"/>
+                            <constraint firstItem="BVL-Nb-OXQ" firstAttribute="centerX" secondItem="iLK-dB-KxU" secondAttribute="centerX" id="VAU-yB-neY"/>
+                            <constraint firstItem="Swi-gF-K8Z" firstAttribute="bottom" secondItem="rA5-xs-1UU" secondAttribute="bottom" constant="80" id="mwN-VX-RUI"/>
+                            <constraint firstItem="BVL-Nb-OXQ" firstAttribute="centerY" secondItem="iLK-dB-KxU" secondAttribute="centerY" id="yDE-Cy-5qT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Swi-gF-K8Z"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="HxV-Ui-MCU"/>
+                    <connections>
+                        <outlet property="inputDatePicker" destination="BVL-Nb-OXQ" id="dzb-bx-Yez"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="br9-Ox-JcH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1149.5999999999999" y="113.79310344827587"/>
+        </scene>
+        <!--Output-->
+        <scene sceneID="wZp-5i-dY1">
+            <objects>
+                <viewController title="Output" id="ExH-rz-lAD" customClass="OutputViewController" customModule="LiveTimeCounter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OWT-tW-hDO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1233455w456245623" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CdA-Lb-COC">
+                                <rect key="frame" x="88" y="323" width="174" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="wUJ-PD-Nrr"/>
                     </view>
+                    <connections>
+                        <outlet property="outputLabel" destination="CdA-Lb-COC" id="MFh-bp-SFX"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U4k-MA-Kno" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1927" y="108"/>
         </scene>
     </scenes>
 </document>
