--- a/LiveTimeCounter/Base.lproj/Main.storyboard
+++ b/LiveTimeCounter/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -78,10 +77,10 @@
             </objects>
             <point key="canvasLocation" x="1149.5999999999999" y="113.79310344827587"/>
         </scene>
-        <!--Output-->
+        <!--LiveTime-->
         <scene sceneID="wZp-5i-dY1">
             <objects>
-                <viewController title="Output" id="ExH-rz-lAD" customClass="OutputViewController" customModule="LiveTimeCounter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="LiveTime" id="ExH-rz-lAD" customClass="OutputViewController" customModule="LiveTimeCounter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OWT-tW-hDO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -89,21 +88,96 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1233455w456245623" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CdA-Lb-COC">
                                 <rect key="frame" x="88" y="323" width="174" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="2RG-0d-lti" appends="YES" id="6vV-BJ-se0"/>
+                                </connections>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="wUJ-PD-Nrr"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="cbu-h5-NEY" appends="YES" id="UOx-me-O3o"/>
+                            <outletCollection property="gestureRecognizers" destination="rcO-Jl-yaI" appends="YES" id="6zU-V5-e6D"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="outputLabel" destination="CdA-Lb-COC" id="MFh-bp-SFX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U4k-MA-Kno" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <screenEdgePanGestureRecognizer minimumNumberOfTouches="1" id="cbu-h5-NEY"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.10000000000000001" numberOfTapsRequired="1" numberOfTouchesRequired="2" id="2RG-0d-lti">
+                    <connections>
+                        <outlet property="delegate" destination="OWT-tW-hDO" id="gqu-xK-Asn"/>
+                    </connections>
+                </pongPressGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="3" id="rcO-Jl-yaI">
+                    <connections>
+                        <segue destination="qtr-SH-4AX" kind="show" id="ODu-O2-UfK"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1927" y="108"/>
+        </scene>
+        <!--Easteregg-->
+        <scene sceneID="dJc-6U-Zpf">
+            <objects>
+                <viewController title="Easteregg" id="qtr-SH-4AX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="q3g-pl-KN5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You've got it" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kd-ae-AtO">
+                                <rect key="frame" x="61" y="304" width="253" height="58.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="49"/>
+                                <color key="textColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="dnR-WE-PgI">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pBU-ee-XAU">
+                                <rect key="frame" x="0.0" y="417" width="375" height="201"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="dnR-WE-PgI" firstAttribute="top" secondItem="M5R-2A-IeF" secondAttribute="top" id="3b2-tN-a04"/>
+                            <constraint firstItem="pBU-ee-XAU" firstAttribute="trailing" secondItem="M5R-2A-IeF" secondAttribute="trailing" id="Fd9-kC-o0b"/>
+                            <constraint firstItem="pBU-ee-XAU" firstAttribute="bottom" secondItem="M5R-2A-IeF" secondAttribute="bottom" id="KBo-jN-wrv"/>
+                            <constraint firstItem="pBU-ee-XAU" firstAttribute="top" secondItem="5kd-ae-AtO" secondAttribute="bottom" constant="54.5" id="OK9-b3-D6R"/>
+                            <constraint firstItem="dnR-WE-PgI" firstAttribute="trailing" secondItem="M5R-2A-IeF" secondAttribute="trailing" id="UFF-XU-RZX"/>
+                            <constraint firstItem="dnR-WE-PgI" firstAttribute="trailing" secondItem="pBU-ee-XAU" secondAttribute="trailing" id="UnG-ig-0dX"/>
+                            <constraint firstItem="pBU-ee-XAU" firstAttribute="bottom" secondItem="M5R-2A-IeF" secondAttribute="bottom" id="fvi-5Y-EC1"/>
+                            <constraint firstItem="5kd-ae-AtO" firstAttribute="centerY" secondItem="q3g-pl-KN5" secondAttribute="centerY" id="j3V-9g-fRA"/>
+                            <constraint firstItem="pBU-ee-XAU" firstAttribute="leading" secondItem="M5R-2A-IeF" secondAttribute="leading" id="k9R-Pm-Fsh"/>
+                            <constraint firstItem="dnR-WE-PgI" firstAttribute="leading" secondItem="M5R-2A-IeF" secondAttribute="leading" id="rJv-jm-Ccb"/>
+                            <constraint firstItem="pBU-ee-XAU" firstAttribute="bottom" secondItem="M5R-2A-IeF" secondAttribute="bottom" id="t6D-He-hTf"/>
+                            <constraint firstItem="5kd-ae-AtO" firstAttribute="centerX" secondItem="q3g-pl-KN5" secondAttribute="centerX" id="vlH-Ad-is7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="M5R-2A-IeF"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="KYO-BF-RVH" appends="YES" id="1p8-gV-mLA"/>
+                        </connections>
+                    </view>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FbI-Jw-gb6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <screenEdgePanGestureRecognizer minimumNumberOfTouches="1" id="KYO-BF-RVH">
+                    <rectEdge key="edges" left="YES"/>
+                    <connections>
+                        <outlet property="delegate" destination="qtr-SH-4AX" id="Th5-U7-8Xy"/>
+                    </connections>
+                </screenEdgePanGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2752.8000000000002" y="116.49175412293854"/>
         </scene>
     </scenes>
 </document>
