working on WebView

--- a/LiveTimeCounter/Base.lproj/Main.storyboard
+++ b/LiveTimeCounter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="B2g-xz-Wlh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="B2g-xz-Wlh">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -34,8 +34,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CounterDefault.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="g8g-tb-Z08">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CounterDefault.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="g8g-tb-Z08">
                                 <rect key="frame" x="0.0" y="32" width="667" height="343"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="BIc-BJ-U3b" appends="YES" id="9Dv-3f-a9s"/>
+                                </connections>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="He5-FF-4Zd">
                                 <rect key="frame" x="50" y="82" width="480" height="243"/>
@@ -214,8 +218,14 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U4k-MA-Kno" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer numberOfTapsRequired="3" id="BIc-BJ-U3b">
+                    <connections>
+                        <action selector="handleTap:" destination="ExH-rz-lAD" id="Rnp-MI-dE0"/>
+                        <segue destination="EpQ-fB-jgb" kind="show" identifier="WebViewSegue" id="px2-1Q-YOh"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1151" y="116"/>
+            <point key="canvasLocation" x="1011" y="-78"/>
         </scene>
         <!--Properties-->
         <scene sceneID="SsV-vv-SqQ">
@@ -324,6 +334,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rH4-Og-1tx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1978.56071964018" y="-287.19999999999999"/>
+        </scene>
+        <!--Web-->
+        <scene sceneID="yW5-mf-tos">
+            <objects>
+                <viewController title="Web" id="EpQ-fB-jgb" customClass="WebViewController" customModule="LiveTimeCounter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iGf-2f-dN8">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xT5-tr-Hh7">
+                                <rect key="frame" x="213" y="123" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <dataDetectorTypes key="dataDetectorTypes" none="YES"/>
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="gxr-nu-LMM"/>
+                    </view>
+                    <connections>
+                        <outlet property="myWebView" destination="xT5-tr-Hh7" id="v39-oE-FP4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cJh-Ol-bLv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1976" y="514"/>
         </scene>
     </scenes>
     <resources>
